# basic_velocity_control

./: CMakeLists.txt  package.xml
config/: controllers.yaml
description/: robot.urdf  rrbot.xacro
description/cad/: arm.blend  arm.blend1  arm.iam  base.ipt  finger1.ipt  finger2.ipt  forearm.ipt  hand.ipt  robot.iam  shoulder.ipt  upperarm.ipt
description/models/: base.stl  finger1.stl  finger2.stl  forearm.stl  gripper-bottom.stl  hand.stl  shoulder.stl  upperarm.stl
launch/: robot.launch  rrbot.launch
src/: rrbot.cpp
